<resources>
    <string name="app_name">Emergency Care </string>
    <string name="Nav_Open">Open</string>
    <string name="Nav_Close">Close</string>
    <string-array name="headername">
        <item>হার্ট অ্যাটাক কি?
        </item>


        <item>হার্ট অ্যাটাক এবং কার্ডিয়াক অ্যারেস্টের মধ্যে পার্থক্য কী?
        </item>


        <item>কারও হার্ট অ্যাটাক হচ্ছে কিনা তা আমি কীভাবে বলতে পারি?
        </item>

        <item>
            যদি ব্যক্তির ওষুধ ব্যবহার করতে হয় তবে আমি কী করব?
        </item>


        <item>আমি কি তাদের এসপিরিন দিতে পারি?
        </item>


    </string-array>
    <string-array name="childname">
        <item>হৃৎপিণ্ডের পেশীতে রক্ত ​​সরবরাহ হঠাৎ বন্ধ হয়ে গেলে হার্ট অ্যাটাক হয়।
            বন্ধ মানে হৃৎপিণ্ডগুলি কার্যকরভাবে কাজ করতে পারে না, তাই হার্ট অ্যাটাক মারাত্মক হতে পারে।
            হার্ট অ্যাটাকের তীব্রতা নির্ভর করে হার্টের পেশীগুলির ক্ষেত্রের আকারের উপর।
        </item>


        <item>হার্ট অ্যাটাক হয় যখন হৃৎপিণ্ডের পেশীতে রক্ত ​​সরবরাহ হঠাৎ বন্ধ হয়ে যায় তবে এটি এখনও কম হারে রক্ত ​​পাম্প করতে পারে।
        কার্ডিয়াক অ্যারেস্ট তখন হয় যখন হৃদয় পুরোপুরি বন্ধ হয়ে যায়, যার ফলে ব্যক্তিটি ধসে পড়ে, চেতনা হ্রাস পায় এবং শ্বাস বন্ধ করে দেয়।
        এটি হার্ট অ্যাটাকের কারণে হতে পারে।
        </item>

        <item>অবিরাম ব্যথা যা ব্যাক্তির  বাহু, ঘাড়ে ,চোয়াল, পিঠ বা পেট ছড়িয়ে যেতে পারে।কিছু ক্ষেত্রে, ব্যথা এই জায়গাগুলির মধ্যে কেবল একটিতে হতে পারে।\n
            -ঊর্ধ্বশ্বাস \n
            -অসুস্থ বোধ \n
            -ঘাম

        </item>

        <item>যদি তাদের ট্যাবলেট বা স্প্রে থাকে তবে তা সেগুলি নিতে দিন। আপনার ব্যাক্তিটির  সাহায্য করার প্রয়োজন হতে পারে।
        </item>

        <item>
            ধীরে ধীরে চিবানোর জন্য আপনি সেই ব্যক্তিকে একটি অ্যাসপিরিন ট্যাবলেট সরবরাহ করতে পারেন,
            কারণ এটি তাদের রক্ত ​​পাতলা করতে সহায়তা করবে। তাদের এক ডোজ 300 মিলিগ্রামের বেশি গ্রহণ করা উচিত নয়।
        </item>


    </string-array>
    <string name="call105">Call 105</string>
    <string name="call109">Call 109</string>
    <string name="text09">নারী ও শিশুদের বিরুদ্ধে সহিংসতা প্রতিরোধে গড়ে উঠেছে
        “নারী ও শিশু বিষয়ক হেল্পলাইন” কলসেন্টারটি যার নাম্বার দুটি হলো 109 (সকল অপারেটর থেকে),
        10921 (জিপি ও বাংলালিংক বাদে)। ২০১২ সালের ১৯ জুন থেকে এর সেবা চালু হয়েছ। মহিলা ও শিশুবিষয়ক মন্ত্রণালয়ের
        নারী নির্যাতন প্রতিরোধকল্পে মাল্টিসেক্টরাল কর্মসূচির আওতায় এই নম্বর দুটি চালু করা হয়েছে। এই দুটি নাম্বারে ডায়াল করে য
        দি কোনো বিপন্ন নারী জরুরি সাহায্য চান, তাহলে তৎক্ষণাৎ ঘটনাস্থলের জরুরি খবর স্থানীয় প্রশাসন, স্থানীয় সরকার প্রতিষ্ঠান,
        পুলিশ প্রশাসন ও সংশ্লিষ্ট এনজিও সংগঠন-এই চার জায়গায় একই সঙ্গে পাঠানো হয়ে থাকে। এটি টোল ফ্রি।
        এখানে ফোন দিলে কোন টাকা কাটা যাবে না।</string>
    <string name="national_105">দেশের যে কোন প্রান্ত থেকে এই নাম্বারে কল করে নাগরিকগণ
        তাদের জাতীয় পরিচয়পত্র নিবন্ধন, সংশোধন ও হালনাগাদ সংক্রান্ত তথ্য ও পরামর্শ সেবা পেতে পারেন।</string>
    <string name="call1">✔ সরকারী সেবা প্রাপ্তির পদ্ধতি সম্পর্কে তথ্য পান ।</string>
    <string name="call_4">✔ গুরুত্বপূর্ণ ইসলামী মাসআলা-মাসাইল পান ।</string>
    <string name="call_5">✔ আবহাওয়ার তথ্য পান ।</string>
    <string name="call_999">সর্বস্তরের নাগরিকদের জরুরি সেবা প্রদানের উদ্দেশ্য ২০১৭ সালের ১২
        ডিসেম্বর স্বরাষ্ট্র মন্ত্রণালয়ের অধীনে বাংলাদেশ
        পুলিশ এই কল সেন্টার সেবাটি চালু করে।
        সপ্তাহে ৭ দিন ২৪ ঘন্টা চালু রয়েছে এ কল সেন্টার।
        ৯৯৯ একটি টোল ফ্রি নাম্বার।</string>
    <string name="call_6">✔ ওষুধের সত্যতা পরীক্ষা করুন ।</string>
    <string name="call_9991">৯৯৯ জরুরি সেবা বাংলাদেশ পুলিশের অধীনে পরিচালিত একটি জরুরি কল সেন্টার।
        এখান থেকে জরুরি পুলিশ, জরুরি ফায়ার সার্ভিস ও জরুরি এ্যাম্বুলেন্স সেবা প্রদান করা হয়। দেশের যে কোন প্রান্ত থেকে যে কোন ব্যক্তি ৯৯৯ কল করার মাধ্যমে
        এ সকল জরুরি সেবা গ্রহন করতে পারবেন। সর্বস্তরের নাগরিকদের জরুরি সেবা প্রদানের উদ্দেশ্য ২০১৭ সালের
        ১২ ডিসেম্বর স্বরাষ্ট্র মন্ত্রণালয়ের অধীনে বাংলাদেশ পুলিশ এই কল সেন্টার সেবাটি চালু করে। সপ্তাহে ৭ দিন ২৪ ঘন্টা চালু রয়েছে এ কল সেন্টার। ৯৯৯ একটি টোল ফ্রি নাম্বার। এই নাম্বারে কল করার জন্য কলারকে কোন টাকা খরচ করতে হয় না।


বর্তমানে এই কল সেন্টারে শতাধিক এজেন্ট জরুরি সেবা প্রদানে কাজ করে যাচ্ছে। ভবিষ্যতে এই সংখ্যা বৃদ্ধির পরিকল্পনা রয়েছে। এছাড়া পুলিশ, ফায়ার সার্ভিস এবং এ্যাম্বুলেন্স সেবার পাশাপাশি অন্যান্য সেবা দেওয়ার পরিকল্পনা হাতে নেয়া হয়েছে। আপনার জরুরি কলের জন্য আমাদের প্রশিক্ষিত কল সেন্টার এজেন্টরা সদা প্রস্তুত, প্রস্তুত বাংলাদেশ পুলিশ। ভাল থাকুন, নিরাপদে থাকুন।</string>
    <string name="call_8">✔ বিভিন্ন সামাজিক সমস্যা যেমন বাল্য বিবাহ, যৌতুক, মাদক ব্যবসা, জুয়া খেলা, পরিবেশ দূষণ, খাদ্যে ভেজাল, ইভটিজিং ইত্যাদি থেকে অভিযোগ ও প্রতিকার পান ।</string>
    <string name="call_7">✔ ই-টিন সম্পর্কিত সমস্ত ই-টিন সম্পর্কিত সমস্যার সমাধান এবং সমাধান পান ।</string>
    <string name="call_3">✔ পর্যটন স্পট এবং বিভিন্ন জেলা সম্পর্কে তথ্য পান ।</string>
    <string name="call_2">✔ জনপ্রতিনিধি এবং সরকারী কর্মীদের যোগাযোগের তথ্য পান ।</string>
    <string name="call_head_line">যে কোনও সময় 333 ডায়াল করুন</string>
    <string name="call_head_line2">যে কোনও সময় 999 ডায়াল করুন</string>
    <string name="call_head_line3">যে কোনও সময় 16263 ডায়াল করুন</string>
    <string name="call_head_line4"> প্রয়োজনে 105 ডায়াল করুন</string>
    <string name="call_head_line5"> প্রয়োজনে 109 ডায়াল করুন</string>
    <string name="call_105">জাতীয় পরিচয়পত্র নিবন্ধন, সংশোধন ও হালনাগাদ সংক্রান্ত তথ্য ও পরামর্শ প্রদানের জন্য নির্বাচন কমিশন
        একটি হেল্পলাইন চালু করেছে। নির্বাচন কমিশনের পরিচালনায় এই হেল্পডেস্কটি ২০১৫ সালের নভেম্বরে তাদের যাত্রা শুরু করে।
        এর শর্টকোড নাম্বার ‘১০৫’।দেশের যে কোন প্রান্ত থেকে এই নাম্বারে কল করে নাগরিকগণ
        তাদের জাতীয় পরিচয়পত্র নিবন্ধন, সংশোধন ও হালনাগাদ সংক্রান্ত তথ্য ও পরামর্শ সেবা পেতে পারেন।
        ২ টাকা ৪৫ পয়সা কলরেট প্রযোজ্য।</string>
    <string name="Call_333">Call 333</string>
    <string name="sheka">জানুন</string>
    <string name="h1"> 4\'6\"</string>
    <string name="h2">4\'7\"</string>
    <string name="h3">4\'8\"</string>
    <string name="h4">4\'9\"</string>
    <string name="h5">4\'10\"</string>
    <string name="h6">4\'11\"</string>
    <string name="h7">5\'0\"</string>
    <string name="h8">5\'1\"</string>
    <string name="h9">5\'2\"</string>
    <string name="h10">5\'3\"</string>
    <string name="h11">5\'4\"</string>
    <string name="h12">5\'5\"</string>
    <string name="h13">5\'6\"</string>
    <string name="h14">5\'7\"</string>
    <string name="h15">5\'8\"</string>
    <string name="h16">5\'9\"</string>
    <string name="he10">5\'10\"</string>
    <string name="he11">5\'11\"</string>
    <string name="h17">6\'0\"</string>
    <string name="h18">6\'1\"</string>
    <string name="h19">6\'2\"</string>
    <string name="h20">6\'3\"</string>
    <string name="h21">6\'4\"</string>
    <string name="h22">6\'5\"</string>
    <string name="kit">আপনাকে শুরু করার জন্য কিছু প্রস্তাবিত আইটেম:</string>
    <string name="v1">ইনডোরের সময়</string>
    <string name="vumi4">সচেতন থাকুন যে আগুন না থাকলেও আগুনের অ্যালার্ম এবং স্প্রিংকার সিস্টেম প্রায়শই ভূমিকম্পের সময় বুল্ডিংয়ে বন্ধ হয়ে যায়।</string>
    <string name="vumi3">কাঁপুনি থামার আগ পর্যন্ত বাড়ির ভিতরে থাকুন এবং আপনি নিশ্চিত হন যে এটি প্রস্থান করা নিরাপদ।</string>
    <string name="vumi2">ছড়িয়ে ছিটিয়ে থাকা কাচের ফলে আহত হওয়া এড়াতে জানালা থেকে দূরে থাকুন।</string>
    <string name="vumi1">আপনি যদি বিছানায় থাকেন তবে সেখানেই থাকুন, কুঁকড়ে ধরুন এবং বালিশ দিয়ে আপনার মাথাটি রক্ষা করুন।</string>
    <string name="vumi">ভূমিকম্পগুলি বিশাল অঞ্চল জুড়ে ধ্বংসাত্মক হতে পারে, স্থল কাঁপায় এবং বিল্ডিং-গুলি ভেঙে দেয়। ভূমিকম্পের আগে এবং পরে কী করা উচিত তা শিখুন।</string>
    <string name="kit2">খাবার পানি-কমপক্ষে  3-দিনের জন্য রাখুন, প্রতিদিন একজন ব্যক্তির জন্য এক গ্যালন।</string>
    <string name="kit3">খাদ্য কমপক্ষে 3-দিনের জন্য রাখুন।</string>
    <string name="kit4">ফ্লাশলাইট।</string>
    <string name="vumi22">পরে</string>
    <string name="vumi24">আপনার বাড়ির আশেপাশের ক্ষতিগ্রস্থ অঞ্চলগুলি থেকে দূরে থাকুন।</string>
    <string name="vumi23">বাড়ি থেকে দূরে থাকলে, কেবল তখনই ফিরে আসুন যখন কর্তৃপক্ষ বলে যে এটি করা নিরাপদ।</string>
    <string name="vumi11">আউটডোরের সময়</string>
    <string name="vumi17">আপনি যদি কোনও পার্বত্য অঞ্চলে বা অস্থির ঢালু বা খাড়াগুলির নিকটে থাকেন তবে শিলা এবং অর্থের ধ্বংসাবশেষের জন্য সতর্ক হন।</string>
    <string name="vumi14">গাড়ীটি একটি ফাঁকা যায়গাতে নিয়ে যান এবং থামুন।</string>
    <string name="vumi13">গাড়ীতে থাকার সময় </string>
    <string name="vumi16">কাঁপানো বন্ধ না হওয়া পর্যন্ত আপনার সিটবেল্টটি বেঁধে রেখে ভিতরে থাকুন। </string>
    <string name="vumi15">যদি কোনও পাওয়ারের লাইন আপনার যানবাহনে পড়ে তবে বাইরে যাবেন না। সহায়তার জন্য অপেক্ষা করুন।</string>
    <string name="vumi12">একটি স্পষ্ট স্পট খুঁজুন এবং মাটিতে বসে পড়ুন কাঁপানো বন্ধ না হওয়া পর্যন্ত সেখানেই থাকুন।  বিল্ডিং ,কারেন্টের তার ,গাছ থেকে দূরে থাকুন</string>
    <string name="kit5">এক্সট্রা ব্যাটারিস।</string>
    <string name="kit6">ফার্স্ট এইড কিট। </string>
    <string name="kit7">এক্সট্রা ক্যাশ। </string>
    <string name="kit10">পরিবার এবং জরুরি যোগাযোগের তথ্য। </string>
    <string name="kit9">মূল ব্যক্তিগত নথি কপিজ। </string>
    <string name="kit8">গাড়ির চাবি এবং বাড়ির চাবিগুলির অতিরিক্ত সেট।। </string>
    <string name="kit1"> জরুরী প্রস্তুতির একটি দুর্দান্ত উপায় হলো জরুরী প্রস্তুতি কিট তৈরি করা যা প্রয়োজনীয় বিস্তৃত আইটেমগুলি সহ আপনার
        প্রয়োজন হতে পারে যদি বিপর্যয় ঘটে তবে। এটিকে কোথাও অ্যাক্সেসযোগ্য রাখুন এবং এটি আপডেট রয়েছে তা নিশ্চিত করার জন্য এটি নিয়মিত চেক করুন </string>
    <string name="f1"> 28/34 kg</string>
    <string name="f2"> 30/37 kg</string>
    <string name="f3"> 32/39 kg</string>
    <string name="f4"> 34/42 kg</string>
    <string name="f5"> 36/44 kg</string>
    <string name="f6"> 39/47 kg</string>
    <string name="f7"> 40/49 kg</string>
    <string name="f8"> 43/52 kg</string>
    <string name="f9"> 44/54 kg</string>
    <string name="f10"> 47/57 kg</string>
    <string name="f11"> 49/59 kg</string>
    <string name="f12">51/62 kg</string>
    <string name="f13">53/64 kg</string>
    <string name="f14">55/67 kg</string>
    <string name="f15">57/69 kg</string>
    <string name="f16">59/72 kg</string>
    <string name="f17">65/79 kg</string>
    <string name="f18">67/82 kg</string>
    <string name="f19">69/84 kg</string>
    <string name="f20">71/87 kg</string>
    <string name="flu2">চেকলিস্ট</string>
    <string name="flu8">ঘরে থাকুন।</string>
    <string name="flu7">যতটা সম্ভব অন্যদের থেকে দূরে থাকুন।</string>
    <string name="flu6">কাশি এবং হাঁচি কাটলে আপনার মুখ এবং নাক টিস্যু দিয়ে ঢেকে রাখুন।</string>
    <string name="flu5">আপনার চোখ, নাক এবং মুখ স্পর্শ এড়ান।</string>
    <string name="flu4">অসুস্থ ব্যক্তিদের সাথে যোগাযোগ এড়ানো বা হ্রাস করুন।</string>
    <string name="flu3">সাবান এবং জল বা অ্যালকোহল ভিত্তিক হ্যান্ড স্যানিটাইজার দিয়ে ঘন ঘন হাত ধুয়ে নিন।</string>
    <string name="flu1">কীভাবে রোগব্যাধি ছড়াতে পারে সে সম্পর্কে আমাদের সহায়ক তথ্য সহ একটি ফ্লু মহামারীর জন্য প্রস্তুত থাকুন।</string>
    <string name="one">১</string>
    <string name="two">২</string>
    <string name="three">৩</string>
    <string name="four">৪</string>
    <string name="next">পরবর্তী</string>
    <string name="day7">তারা আপনাকে যা বলে তা আপনি যদি নিশ্চিত না হন তবে জরুরি সার্ভিসগুলিতে কল করুন।</string>
    <string name="day6">মনে করবেন না যে অন্যান্য লোকেরা সাহায্য করবে।</string>
    <string name="day5">প্রথমে আপনার সুরক্ষা বিবেচনা করুন।</string>
    <string name="day4">আপনি কী করবেন সে সম্পর্কে অনিশ্চিত বোধ করলেও  লোকদের সাহায্য করার চেষ্টা করতে রাজি হন।</string>
    <string name="day3">প্রাথমিক কিছু প্রাথমিক দক্ষতা শিখুন। এগুলি শেখা সহজ এবং করা সহজ।</string>
    <string name="day2">কীভাবে আপনার হাসপাতালে যাবেন তা জানেন।</string>
    <string name="day1">স্থানীয় জরুরী সংখ্যাগুলির তালিকা রাখুন।</string>
    <string name="day">দুর্ঘটনা ও জরুরী অবস্থা যে কোনও জায়গায়, যে কোনও জায়গায় এবং যে কোনও সময় ঘটতে পারে।</string>
    <string name="flu">ফ্লু</string>
    <string name="everyday">দৈনন্দিন জরুরি</string>
    <string name="emergency_kit">ইমার্জেন্সি কিট</string>
</resources>