<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Next_333_Activity">
    <ImageView
        android:src="@drawable/logo_33"
        android:layout_width="match_parent"
        android:layout_height="150dp">

    </ImageView>
    <TextView
        android:background="@color/red_colour"
        android:textStyle="bold"
        android:textColor="@color/white_colour"
        android:text="@string/call_head_line"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/call1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/call_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/call_3"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/call_4"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/call_5"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/call_6"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/call_7"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <TextView
                android:textColor="@color/black_colour"
                android:textSize="17sp"
                android:paddingLeft="10dp"
                android:text="@string/call_8"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>